GROOVY-9073: added compiler option to enable preview features (JEP 12)